# Euler

./: .gitignore  CMakeLists.txt  TODO.txt  diff.txt  docstrings.txt
.vim/: coc-settings.json
include/: core.hpp  macros.hpp
include/common/: common.hpp
include/fn/: fn.hpp
include/fn/arithmetic/: add.hpp  diff.hpp  mult.hpp  sub.hpp
include/matrix/: mat.hpp
include/vector/: vec.hpp  vec2.hpp  vec3.hpp
src/: core.cpp
src/common/: common.cpp
test/1/: main.cpp
tests/: CMakeLists.txt
tests/common/: main.cpp
tests/vec/: main.cpp
